@@ -7634,6 +7634,7 @@ If not set manually, the first image of the sequence is taken as reference.</pro
                           <item>TYCHO2</item>
                           <item>NOMAD</item>
                           <item>Gaia DR2</item>
+                          <item translatable="yes">Gaia EDR3</item>
                           <item>PPMXL</item>
                           <item>Bright stars</item>
                         </items>
