@@ -18,6 +18,7 @@ First Release candidate version for 1.0.0
 * WCS data is now updated after geometric transformations (mirror, rotate and crop)
 * Added UI button to plot WCS grid and compass
 * Added user catalogue for astrometry annotation
+* Added GAIA EDR3 catalogue for astrometry
 * Allows to force debayer of SER files
 
 v0.99.10.1 June 23, 2021
