@@ -18,6 +18,7 @@ siril 1.0.0~RC1
 * WCS data is now updated after geometric transformations (mirror, rotate and crop)
 * Added UI button to plot WCS grid and compass
 * Added user catalogue for astrometry annotation
+* Added GAIA EDR3 catalogue for astrometry
 * Allows to force debayer of SER files
 
 siril 0.99.10.1
